--- a/WindowsFormsApp1/packages.config
+++ b/WindowsFormsApp1/packages.config
@@ -33,7 +33,7 @@
   <package id="Microsoft.Web.WebView2" version="1.0.3116-prerelease" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
-  <package id="RazorLight" version="2.0.0" targetFramework="net462" />
+  <package id="RazorLight" version="2.0.0-beta9" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
